# pyNFSE

./: .gitignore  pyproject.toml  readme.md  test_soap_cdata.py  test_soap_completo.py
docs/: ANALISE_DOCUMENTACAO_NFSE_NACIONAL.md  CHANGELOG_ATUALIZACAO_SOAP.md  DOCUMENTACAO_WEBSERVICE_NFSE_NACIONAL.docx  DOCUMENTACAO_WEBSERVICE_NFSE_NACIONAL.txt  RESUMO_ANALISE.md
examples/: README.md  basic_usage.py  quick_start.py
pynfse/common/: api.py  coerced_decimal.py  response.py  response_parser.py  signature.py  xml.py
pynfse/integration/carnaubal/abrasf/: nfse.py
pynfse/integration/carnaubal/abrasf/models/: base.py  cancelamento.py  cancelamento_resposta.py  consulta.py  consulta_rps_resposta.py  consultar_lote.py  consultar_rps.py  lote.py  lote_resposta.py  respostas.py  rps.py  rps_resposta.py
pynfse/integration/carnaubal/abrasf/reference/: envio_lote.xml
pynfse/integration/carnaubal/abrasf/schema/: cancelar_nfse_envio_v1.xsd  cancelar_nfse_resposta_v1.xsd  consultar_lote_rps_resposta_v1.xsd  consultar_situacao_lote_rps_resposta_v1.xsd  (+1 more)
pynfse/integration/carnaubal/speedgov/: __init__.py  enums.py  nfse.py
pynfse/schemas/: lote.py  nfse.py  rps.py
pynfse/src/common/: api.py  response.py  signature.py  xml.py  xml_node.py
tests/: README.md  conftest.py  test_abrasf_models.py  test_abrasf_models_detailed.py  test_abrasf_respostas.py  test_abrasf_schema_validation.py  test_api.py  test_carnaubal_nfse.py  test_coerced_decimal.py  test_response.py  test_rps_scenarios.py  test_schemas_nfse.py  test_schemas_rps.py  test_speedgov_calc.py  test_xml.py
(+62 files in other folders)
